# photosBackup

./: CMakeLists.txt  backup.cpp  backup.h  copy_files.cpp  copy_files.h  find_files.cpp  find_files.h  main.cpp
build-photosBackup-Desktop_Qt_5_12_0_clang_64bit-Debug/: Makefile  moc_backup.cpp  moc_window.cpp
build-photosBackup-Desktop_Qt_5_12_0_clang_64bit-Debug/photosBackup.app/Contents/: Info.plist
build-photosBackup-Desktop_Qt_5_12_0_clang_64bit-Debug/photosBackup.app/Contents/MacOS/: photosBackup
build-photosBackup-Desktop_Qt_5_12_0_clang_64bit-Release/: Makefile  moc_window.cpp
build-photosBackup-Desktop_Qt_5_12_0_clang_64bit-Release/photosBackup.app/Contents/: Info.plist
build-photosBackup-Desktop_Qt_5_12_0_clang_64bit-Release/photosBackup.app/Contents/MacOS/: photosBackup
photosBackup/: backup.cpp  backup.h  copy_files.cpp  find_files.cpp  helpers.cpp  helpers.h  main.cpp  photosBackup.pro  window.cpp  window.h
